[package]
name = "allod"
authors = ["Kaay <kk-pub@outlook.com>"]
version = "0.1.0"
edition = "2021"
description = "mount alist as local Disk(Directory)"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dokan={ version="0.3.1+dokan206" }
widestring = "=0.4.3"
ctrlc = { version = "3", features = ["termination"] }
rustydav = "0.1.3"
winapi = {version = "0.3.9", features = [
    "std",
    "errhandlingapi",
    "handleapi",
    "heapapi",
    "ioapiset",
    "minwinbase",
    "minwindef",
    "ntdef",
    "ntstatus",
    "processthreadsapi",
    "sddl",
    "securitybaseapi",
    "synchapi",
    "winbase",
    "winerror",
    "winnt",
]}


[dev-dependencies]